# ztop

./: .gitignore  CMakeLists.txt  JsonStructure.txt  Object.h  ProcSystem.txt  Process.c  Process.h  README.md  RichString.c  RichString.h  aggregator.go  collector.go  collectors.py  fields.go  influxdb_setup.py  main.go  memoize.py  monitor.go  proc.c  proc.h  processMonitor.py  push.py  simpleDaemon.py  sysMonitorMemInfo.go  systemMonitor.py  ws.py  ztop.c  ztopd.py
client/: app.js  index.html  orderBy.js
client/bower_components/platform/: .bower.json
client/bower_components/polymer/: .bower.json
client/bower_components/polymer-collapse/: .bower.json  bower.json
client/bower_components/polymer-selector/: .bower.json
client/bower_components/polymer-ui-accordion/: .bower.json  bower.json
client/bower_components/polymer-ui-collapsible/: .bower.json  bower.json
client/elements/ztop-app/: ztop-app.html
client/elements/ztop-chart-line/: index.html  ztop-chart-line.html
client/elements/ztop-fifo/: ztop-fifo.html
client/elements/ztop-overview/: ztop-overview.html
client/elements/ztop-percent-indicator-vertical/: ztop-percent-indicator-vertical.html
client/elements/ztop-process-cpu-info/: ztop-process-cpu-info.html
client/elements/ztop-process-disk-info/: ztop-process-disk-info.html
client/elements/ztop-process-network-info/: ztop-process-network-info.html
client/elements/ztop-web-socket/: ztop-web-socket.html
pkg/: .gitkeepdirectory
src/github.com/ztop/ztop/: collector.go
